tests/test157.rael.exp
125
1232
1231
{ 49, 50, 51 }
Voidd
1
123.230
Error [tests/test157.rael:8:16]: Can't cast value to such type
| log (123.23 to Stack)
|                ^
