tests/test157.rael
log ("123" to Number) + 2
log ("123" to String) + "2"
log (123 to String) + "1"
log ("123" to Stack)
log (Void to String) + "d"
log (Void to Number) + 1
log (123.23 to String) + "0"
log (123.23 to Stack)
